feat(auth): add endpoint RefreshToken
