# docs/swagger.json
@@ -96,6 +96,46 @@
                 }
             }
         },
+        "/auth/refresh-token": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Refresh token. Requires valid refresh token in Authorization header.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Refresh token",
+                "responses": {
+                    "200": {
+                        "description": "Returns new access and refresh tokens",
+                        "schema": {
+                            "$ref": "#/definitions/url-shortener_pkg_http.Response-url-shortener_internal_auth_Token"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - Missing or invalid token",
+                        "schema": {
+                            "$ref": "#/definitions/url-shortener_pkg_http.Response-any"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/url-shortener_pkg_http.Response-any"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/register": {
             "post": {
                 "description": "Create a new user account and return authentication tokens",
@@ -215,7 +255,7 @@
         },
         "/{alias}": {
             "get": {
-                "description": "Performs redirect to the original URL using short alias",
+                "description": "Performs redirect from short URL to original",
                 "tags": [
                     "links"
                 ],
@@ -287,6 +327,9 @@
                 "access_token": {
                     "type": "string"
                 },
+                "refresh_token": {
+                    "type": "string"
+                },
                 "token_type": {
                     "type": "string"
                 }
@@ -347,12 +390,19 @@
                 }
             }
         },
+        "url-shortener_pkg_http.MetaData": {
+            "type": "object",
+            "additionalProperties": {}
+        },
         "url-shortener_pkg_http.Response-any": {
             "type": "object",
             "properties": {
                 "data": {},
                 "error": {
                     "type": "string"
+                },
+                "meta": {
+                    "$ref": "#/definitions/url-shortener_pkg_http.MetaData"
                 },
                 "ok": {
                     "type": "boolean"
@@ -368,6 +418,9 @@
                 "error": {
                     "type": "string"
                 },
+                "meta": {
+                    "$ref": "#/definitions/url-shortener_pkg_http.MetaData"
+                },
                 "ok": {
                     "type": "boolean"
                 }
@@ -382,6 +435,9 @@
                 "error": {
                     "type": "string"
                 },
+                "meta": {
+                    "$ref": "#/definitions/url-shortener_pkg_http.MetaData"
+                },
                 "ok": {
                     "type": "boolean"
                 }
@@ -395,6 +451,9 @@
                 },
                 "error": {
                     "type": "string"
+                },
+                "meta": {
+                    "$ref": "#/definitions/url-shortener_pkg_http.MetaData"
                 },
                 "ok": {
                     "type": "boolean"
